--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 <body>
     <div class="jogo1">
-        <img src="img/Barcelona.png" alt="Barcelona">
-        <img src="img/PSG.png" alt="PSG">
+        <img src="Barcelona.png" alt="Barcelona">
+        <img src="PSG.png" alt="PSG">
     </div>
     <div class="versus">
-        <img src="img/versus.png" alt="X">
+        <img src="versus.png" alt="X">
     </div>
     <div class="text-container">
         <p>Jogo as 16:00h</p>
@@ -31,11 +31,11 @@
         </button>
     </div>
     <div class="jogo2">
-        <img src="img/AtleticoDeMadrid.png" alt="AtleticoDeMadrid">
-        <img src="img/Borussia.png" alt="Borussia">
+        <img src="imgAtleticoDeMadrid.png" alt="AtleticoDeMadrid">
+        <img src="imgBorussia.png" alt="Borussia">
     </div>
     <div class="versus2">
-        <img src="img/versus.png" alt="X">
+        <img src="imgversus.png" alt="X">
     </div>
     <div class="text-container2">
         <p>Jogo as 16:00h</p>
@@ -46,11 +46,11 @@
         </button>
     </div>
     <div class="jogo3">
-        <img src="img/Bahia.png" alt="Bahia">
-        <img src="img/Fluminense.png" alt="Fluminense">
+        <img src="Bahia.png" alt="Bahia">
+        <img src="Fluminense.png" alt="Fluminense">
     </div>
     <div class="versus3">
-        <img src="img/versus.png" alt="X">
+        <img src="imgversus.png" alt="X">
     </div>
     <div class="text-container3">
         <p>Jogo as 21:30h</p>
