--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         </button>
     </div>
     <div class="jogo2">
-        <img src="imgAtleticoDeMadrid.png" alt="AtleticoDeMadrid">
-        <img src="imgBorussia.png" alt="Borussia">
+        <img src="AtleticoDeMadrid.png" alt="AtleticoDeMadrid">
+        <img src="Borussia.png" alt="Borussia">
     </div>
     <div class="versus2">
-        <img src="imgversus.png" alt="X">
+        <img src="versus.png" alt="X">
     </div>
     <div class="text-container2">
         <p>Jogo as 16:00h</p>
@@ -50,7 +50,7 @@
         <img src="Fluminense.png" alt="Fluminense">
     </div>
     <div class="versus3">
-        <img src="imgversus.png" alt="X">
+        <img src="versus.png" alt="X">
     </div>
     <div class="text-container3">
         <p>Jogo as 21:30h</p>
