--- a/index.html
+++ b/index.html
@@ -105,38 +105,38 @@
 <div class="agenda">
     <!-- Rodada 1 -->
     <div class="jogo">
-        <div class="jogo-header">Rodada 2</div>
-        <div class="jogo-data">19:00</div>
+        <div class="jogo-header">Quartas de Finais (Europa League)</div>
+        <div class="jogo-data">16:00</div>
         <div class="jogo-equipes">
             <div class="equipe">
-                <img src="img/Gremio.png" alt="Logo Time A" class="equipe-logo">
-                <div class="equipe-nome">Grêmio</div>
+                <img src="img/Roma.png" alt="Logo Time A" class="equipe-logo">
+                <div class="equipe-nome">Roma</div>
             </div>
             <div class="versus">vs</div>
             <div class="equipe">
-                <img src="img/Atlético Pr.png" alt="Logo Time B" class="equipe-logo">
-                <div class="equipe-nome">Athletico-PR</div>
+                <img src="img/Milan.png" alt="Logo Time B" class="equipe-logo">
+                <div class="equipe-nome">Milan</div>
             </div>
         </div>
         <div class="jogo-footer">
-            <button class="assistir-btn" onclick="window.location.href='https://reidoscanais.org/embed/?id=premiere3'">Link para assistir</button>
+            <button class="assistir-btn" onclick="window.location.href='https://reidoscanais.org/embed/?id=espn'">Link para assistir</button>
         </div>
     </div>
     <!-- Fim Rodada 1 -->
 
     <!-- Rodada 2 -->
     <div class="jogo">
-        <div class="jogo-header">Rodada 2</div>
-        <div class="jogo-data">19:00</div>
+        <div class="jogo-header">Quartas de Finais (Europa League)</div>
+        <div class="jogo-data">16:00</div>
         <div class="jogo-equipes">
             <div class="equipe">
-                <img src="img/Bragantino.png" alt="Logo Time C" class="equipe-logo">
-                <div class="equipe-nome">Bragantino</div>
+                <img src="img/Atalanta.png" alt="Logo Time C" class="equipe-logo">
+                <div class="equipe-nome">Atalanta</div>
             </div>
             <div class="versus">vs</div>
             <div class="equipe">
-                <img src="img/Vasco.png" alt="Logo Time D" class="equipe-logo">
-                <div class="equipe-nome">Vasco</div>
+                <img src="img/Liverpool.png" alt="Logo Time D" class="equipe-logo">
+                <div class="equipe-nome">Liverpool</div>
             </div>
         </div>
         <div class="jogo-footer">
@@ -147,17 +147,17 @@
 
     <!-- Rodada 3 -->
     <div class="jogo">
-        <div class="jogo-header">Rodada 2</div>
-        <div class="jogo-data">20:00</div>
+        <div class="jogo-header">Quartas de Finais (Europa League)</div>
+        <div class="jogo-data">16:00</div>
         <div class="jogo-equipes">
             <div class="equipe">
-                <img src="img/Atlético MG.webp" alt="Logo Time E" class="equipe-logo">
-                <div class="equipe-nome">Atlético-MG</div>
+                <img src="img/Olympique de Marseille.png" alt="Logo Time E" class="equipe-logo">
+                <div class="equipe-nome">Olympique de Marseille-MG</div>
             </div>
             <div class="versus">vs</div>
             <div class="equipe">
-                <img src="img/Criciúma.png" alt="Logo Time F" class="equipe-logo">
-                <div class="equipe-nome">Criciúma</div>
+                <img src="img/Benfica.png" alt="Logo Time F" class="equipe-logo">
+                <div class="equipe-nome">Benfica</div>
             </div>
         </div>
         <div class="jogo-footer">
@@ -168,21 +168,21 @@
 
     <!-- Rodada 4 -->
     <div class="jogo">
-        <div class="jogo-header">Rodada 2</div>
-        <div class="jogo-data">20:00</div>
+        <div class="jogo-header">Quartas de Finais (Europa League)</div>
+        <div class="jogo-data">16:00</div>
         <div class="jogo-equipes">
             <div class="equipe">
-                <img src="img/Palmeiras.webp" alt="Logo Time G" class="equipe-logo">
-                <div class="equipe-nome">Palmeiras</div>
+                <img src="img/West Ham.png" alt="Logo Time G" class="equipe-logo">
+                <div class="equipe-nome">West Ham</div>
             </div>
             <div class="versus">vs</div>
             <div class="equipe">
-                <img src="img/Internacional.png" alt="Logo Time H" class="equipe-logo">
-                <div class="equipe-nome">Internacional</div>
+                <img src="img/Leverkusen.png" alt="Logo Time H" class="equipe-logo">
+                <div class="equipe-nome">Bayer Leverkusen</div>
             </div>
         </div>
         <div class="jogo-footer">
-            <button class="assistir-btn" onclick="window.location.href='https://reidoscanais.org/embed/?id=premiereclubes'">Link para assistir</button>
+            <button class="assistir-btn" onclick="window.location.href='https://reidoscanais.org/embed/?id=espn4'">Link para assistir</button>
         </div>
     </div>
     <!-- Fim Rodada 4 -->
@@ -190,26 +190,26 @@
     <!-- Rodada 5 -->
     <div class="jogo">
         <div class="jogo-header">Rodada 2</div>
-        <div class="jogo-data">20:00</div>
+        <div class="jogo-data">21:30</div>
         <div class="jogo-equipes">
             <div class="equipe">
-                <img src="img/Fortaleza.png" alt="Logo Time I" class="equipe-logo">
-                <div class="equipe-nome">Fortaleza</div>
+                <img src="img/Botafogo.png" alt="Logo Time I" class="equipe-logo">
+                <div class="equipe-nome">Botafogo</div>
             </div>
             <div class="versus">vs</div>
             <div class="equipe">
-                <img src="img/Cruzeiro.png" alt="Logo Time J" class="equipe-logo">
-                <div class="equipe-nome">Cruzeiro</div>
+                <img src="img/Atéltico Go.png" alt="Logo Time J" class="equipe-logo">
+                <div class="equipe-nome">Atlético-GO</div>
             </div>
         </div>
         <div class="jogo-footer">
-            <button class="assistir-btn" onclick="window.location.href='https://reidoscanais.org/embed/?id=premiere6'">Link para assistir</button>
+            <button class="assistir-btn" onclick="window.location.href='https://reidoscanais.org/embed/?id=premiereclubes'">Link para assistir</button>
         </div>
     </div>
     <!-- Fim Rodada 5 -->
 
     <!-- Rodada 6 -->
-    <div class="jogo">
+    <!-- <div class="jogo">
         <div class="jogo-header">Rodada 2</div>
         <div class="jogo-data">20:00</div>
         <div class="jogo-equipes">
@@ -227,10 +227,10 @@
             <button class="assistir-btn" onclick="window.location.href='https://reidoscanais.org/embed/?id=premiere2'">Link para assistir</button>
         </div>
     </div>
-    <!-- Fim Rodada 6 -->
+    <!- Fim Rodada 6 -->
 
     <!-- Rodada 7 -->
-    <div class="jogo">
+    <!-- <div class="jogo">
         <div class="jogo-header">Rodada 2</div>
         <div class="jogo-data">21:30</div>
         <div class="jogo-equipes">
@@ -247,7 +247,7 @@
         <div class="jogo-footer">
             <button class="assistir-btn" onclick="window.location.href='https://globoplay.globo.com/tv-globo/ao-vivo'">Link para assistir</button>
         </div>
-    </div>
+    </div> -->
     <!-- Fim Rodada 7 -->
 
     <!-- Rodada 8 -->
