--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="jogo-equipes">
             <div class="equipe">
                 <img src="img/Olympique de Marseille.png" alt="Logo Time E" class="equipe-logo">
-                <div class="equipe-nome">Olympique de Marseille-MG</div>
+                <div class="equipe-nome">Olympique de Marseille</div>
             </div>
             <div class="versus">vs</div>
             <div class="equipe">
